--- a/webpage.css
+++ b/webpage.css
@@ -1,3 +1,8 @@
 header{
-  background-color:#000000;
+  background: linear-gradient(to top, #3A006F, #000000);
+  border: 1px solid #796400;
+border-radius: 50px;
+}
+body{
+	background-color:#28004D;
 }
