--- a/webpage.css
+++ b/webpage.css
@@ -1,8 +1,8 @@
 header{
-  background: linear-gradient(to top, #3A006F, #000000);
+  background: linear-gradient(to top, #28004D, #000000);
   border: 1px solid #796400;
 border-radius: 50px;
 }
 body{
-	background-color:#28004D;
+	background: radial-gradient(ellipse, #28004D, #000000);
 }
