--- a/myVocabulary/vc.css
+++ b/myVocabulary/vc.css
@@ -13,7 +13,7 @@ main{
 	text-align:center;
 	width:300;
 	height:700;
-	display: inline-grid;
+	display: grid;
 	
 	grid-template-rows:80px 80px;	
 }
