--- a/myVocabulary/vc.css
+++ b/myVocabulary/vc.css
@@ -12,11 +12,12 @@ header{
 main{
 	text-align:center;
 	width:300px;
-	height:700px;
+	height:600px;
 	
 }
 .box{	
-	
+	margin-left:auto;
+	margin-right:auto;
 	width:300;
 	height:77;
 	font-size:50pt;
