--- a/myVocabulary/vc.css
+++ b/myVocabulary/vc.css
@@ -12,10 +12,11 @@ header{
 main{
 	text-align:center;
 	width:300px;
-	height:600px;
+	height:300px;
 	
 }
 .box{	
+	text-align:center;
 	margin-left:auto;
 	margin-right:auto;
 	width:300;
