--- a/myVocabulary/vc.css
+++ b/myVocabulary/vc.css
@@ -19,8 +19,8 @@ main{
 	
 	margin:auto;
 	
-	width:300;
-	height:77;
+	width:300px;
+	height:77px;
 	font-size:50pt;
 	color:#C6D7DB;
 	border-radius: 3px;
