--- a/myVocabulary/vc.css
+++ b/myVocabulary/vc.css
@@ -1,6 +1,6 @@
 
 body{
-	background: linear-gradient(to bottom, #ECFFFF, #005757);
+	background: linear-gradient(to top, #ECFFFF, #005757);
 	
 	
 }
@@ -13,8 +13,8 @@ header{
 	
 	margin:auto;
 	
-	width:300px;
-	height:77px;
+	width:30%;
+	
 	font-size:50pt;
 	color:#C6D7DB;
 	border-radius: 3px;
