--- a/myVocabulary/vc.css
+++ b/myVocabulary/vc.css
@@ -1,6 +1,6 @@
 
 body{
-	background: linear-gradient(to botton, #ECFFFF, #005757);
+	background-image: linear-gradient(to botton, #ECFFFF, #005757);
 	
 	
 }
